--- a/development/assets/styles/interface/nav.scss
+++ b/development/assets/styles/interface/nav.scss
@@ -116,11 +116,11 @@ nav{
 
 	&.about{
 		.ripple{
-			background: #1e1e1e;
+			background: #f8f8f8;
 		}
 
 		a{
-			color: #1e1e1e;
+			color: #f8f8f8;
 		}
 	}
 }
