--- a/public/assets/views/desktop.html
+++ b/public/assets/views/desktop.html
@@ -8,19 +8,55 @@
 			<div class="ripple"></div>
 			<div class="ripple"></div>
 		</figure>
-		<h3>Ripples</h3>	
+		<h3>ripples</h3>	
 	</a>
 	<ul>
-		<li><a href="/work">WORK</a></li>
-		<li><a href="/about">ABOUT</a></li>
-		<li><a href="/services">SERVICES</a></li>
 		<li><a href="/blog">BLOG</a></li>
 		<li><a href="/contact">CONTACT</a></li>
+		<li><a href="/store">STORE</a></li>
+		<li><a href="/work">WORK</a></li>
+		<li><a href="/about">ABOUT</a></li>
 	</ul>
 </nav>
+<section class="about-section" data-ng-hide="currentView != 'about'">
+	<div class="team cf">
+		<div class="card">
+			<figure class="portrait"></figure>
+			<h1></h1>
+			<h3></h3>
+			<p></p>
+			<d>
+				<a href=""></a>
+				<a href=""></a>
+				<a href=""></a>
+			</d>
+		</div>
+		<div class="card">
+			<figure class="portrait"></figure>
+			<h1></h1>
+			<h3></h3>
+			<p></p>
+			<d>
+				<a href=""></a>
+				<a href=""></a>
+				<a href=""></a>
+			</d>
+		</div>
+		<div class="card">
+			<figure class="portrait"></figure>
+			<h1></h1>
+			<h3></h3>
+			<p></p>
+			<d>
+				<a href=""></a>
+				<a href=""></a>
+				<a href=""></a>
+			</d>
+		</div>
+	</div>
+</section>
 <figure class="bg1 bg" data-ng-hide="currentView != 'home'"></figure>
 <figure class="bg2 bg" data-ng-hide="currentView != 'work'"></figure>
 <figure class="bg3 bg" data-ng-hide="currentView != 'about'"></figure>
-<figure class="bg4 bg" data-ng-hide="currentView != 'services'"></figure>
-<figure class="bg5 bg" data-ng-hide="currentView != 'blog'"></figure>
-<figure class="bg6 bg" data-ng-hide="currentView != 'contact'"></figure>
+<figure class="bg5 bg" data-ng-hide="currentView != 'contact'"></figure>
+<figure class="bg6 bg" data-ng-hide="currentView != 'blog'"></figure>
