--- a/development/assets/styles/base/base.scss
+++ b/development/assets/styles/base/base.scss
@@ -1,3 +1,26 @@
+html, body{
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+	margin: 0;
+}
+
+.view{
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+.cf {
+  &:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+}
+
 .bg{
 	width: 100%;
 	height: 100%;
@@ -9,6 +32,7 @@
 	transform: translate3d(0,0,0);
 	transition: opacity .4s;
 	z-index: -1;
+	background: white;
 	
 	&.ng-hide{
 		display: block !important;
@@ -21,11 +45,8 @@
 	}
 
 	&.bg2{
-		background: #ececec;
 	}
 
 	&.bg3{
-		background: url('../images/bluesf.png');
-		background-size: cover;
 	}
 }
