--- a/development/assets/styles/interface/nav.scss
+++ b/development/assets/styles/interface/nav.scss
@@ -127,11 +127,11 @@ nav{
 
 	&.store{
 		.ripple{
-			background: #45D1B0;
+			background: #FF7806;
 		}
 
 		a{
-			color: #45D1B0;
+			color: #FF7806;
 		}
 	}
 
