--- a/development/assets/styles/base/base.scss
+++ b/development/assets/styles/base/base.scss
@@ -32,7 +32,7 @@ html, body{
 	transform: translate3d(0,0,0);
 	transition: opacity .4s;
 	z-index: -1;
-	background: white;
+	background: #f8f8f8;
 	
 	&.ng-hide{
 		display: block !important;
