--- a/development/assets/styles/base/base.scss
+++ b/development/assets/styles/base/base.scss
@@ -3,6 +3,7 @@ html, body{
 	height: 100%;
 	overflow: hidden;
 	margin: 0;
+	background: #f8f8f8;
 }
 
 .view{
@@ -31,7 +32,7 @@ html, body{
 	opacity: 1;
 	transform: translate3d(0,0,0);
 	transition: opacity .4s;
-	z-index: -1;
+	z-index: 1;
 	background: #f8f8f8;
 	
 	&.ng-hide{
@@ -42,11 +43,5 @@ html, body{
 	&.bg1{
 		background: url('../images/background2.png');
 		background-size: cover;
-	}
-
-	&.bg2{
-	}
-
-	&.bg3{
 	}
 }
