--- a/development/assets/styles/base/base.scss
+++ b/development/assets/styles/base/base.scss
@@ -1,3 +1,7 @@
+*{
+	box-sizing: border-box;
+	font-smooting: antialiased;
+}
 html, body{
 	width: 100%;
 	height: 100%;
@@ -34,7 +38,7 @@ html, body{
 	transition: opacity .4s;
 	z-index: 1;
 	background: #f8f8f8;
-	
+
 	&.ng-hide{
 		display: block !important;
 		opacity: 0;
