--- a/development/assets/views/desktop.html
+++ b/development/assets/views/desktop.html
@@ -8,7 +8,7 @@
 			<div class="ripple"></div>
 			<div class="ripple"></div>
 		</figure>
-		<h3>ripples</h3>	
+		<h3>ripples</h3>
 	</a>
 	<ul>
 		<li><a href="/blog">BLOG</a></li>
@@ -18,40 +18,77 @@
 	</ul>
 </nav>
 <section class="about-section" ng-hide="currentView != 'about'">
-	<div class="team cf">
-		<div class="card">
-			<figure class="portrait"></figure>
-			<h1></h1>
-			<h3></h3>
-			<p></p>
-			<d>
-				<a href=""></a>
-				<a href=""></a>
-				<a href=""></a>
-			</d>
-		</div>
-		<div class="card">
-			<figure class="portrait"></figure>
-			<h1></h1>
-			<h3></h3>
-			<p></p>
-			<d>
-				<a href=""></a>
-				<a href=""></a>
-				<a href=""></a>
-			</d>
-		</div>
-		<div class="card">
-			<figure class="portrait"></figure>
-			<h1></h1>
-			<h3></h3>
-			<p></p>
-			<d>
-				<a href=""></a>
-				<a href=""></a>
-				<a href=""></a>
-			</d>
-		</div>
+	<div class="deck">
+
+
+		<div>
+    <div class="hello-section card c-tier">
+    <div class="c-head">
+      <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jaredbooye/128.jpg" alt="">
+      <h3>John Doe</h3>
+      <h4>Co-founder - Designer </h4>
+
+    </div>
+
+    <div class="c-content">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque delectus, magni. Explicabo cumque accusamus debitis soluta! Aut quaerat sequi deleniti nemo iure, obcaecati, distinctio dolorem nam, natus ipsam sapiente ut!</p>
+    </div>
+
+    <div class="c-foot">
+      <ul>
+        <li><a href="#"><span class="zocial-instagram"></span></a></li>
+        <li><a href="#"><span class="zocial-twitter"></span></a></li>
+        <li><a href="#"><span class="zocial-dribbble"></span></a></li>
+      </ul>
+    </div>
+
+  </div>
+ <div class="hello-section card c-tier">
+    <div class="c-head">
+      <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jaredbooye/128.jpg" alt="">
+      <h3>John Doe</h3>
+      <h4>Co-founder - Designer </h4>
+
+    </div>
+
+    <div class="c-content">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque delectus, magni. Explicabo cumque accusamus debitis soluta! Aut quaerat sequi deleniti nemo iure, obcaecati, distinctio dolorem nam, natus ipsam sapiente ut!</p>
+    </div>
+
+    <div class="c-foot">
+      <ul>
+        <li><a href="#"><span class="zocial-instagram"></span></a></li>
+        <li><a href="#"><span class="zocial-twitter"></span></a></li>
+        <li><a href="#"><span class="zocial-dribbble"></span></a></li>
+      </ul>
+    </div>
+
+  </div>
+ <div class="hello-section card c-tier">
+    <div class="c-head">
+      <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jaredbooye/128.jpg" alt="">
+      <h3>John Doe</h3>
+      <h4>Co-founder - Designer </h4>
+
+    </div>
+
+    <div class="c-content">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque delectus, magni. Explicabo cumque accusamus debitis soluta! Aut quaerat sequi deleniti nemo iure, obcaecati, distinctio dolorem nam, natus ipsam sapiente ut!</p>
+    </div>
+
+    <div class="c-foot">
+      <ul>
+        <li><a href="#"><span class="zocial-instagram"></span></a></li>
+        <li><a href="#"><span class="zocial-twitter"></span></a></li>
+        <li><a href="#"><span class="zocial-dribbble"></span></a></li>
+      </ul>
+    </div>
+
+  </div>
+
+  </div>
+
+
 	</div>
 </section>
 <figure class="bg1 bg" ng-hide="currentView != 'home'"></figure>
