--- a/public/assets/styles/style.css
+++ b/public/assets/styles/style.css
@@ -1,3 +1,8 @@
+* {
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  font-smooting: antialiased; }
+
 html, body {
   width: 100%;
   height: 100%;
@@ -206,3 +211,99 @@ nav {
     background: #f83b55; }
   nav.contact a {
     color: #f83b55; }
+
+.deck {
+  max-width: 90%;
+  margin: 1em auto; }
+  .deck .card {
+    border-radius: 2px;
+    overflow: hidden;
+    box-shadow: 0 0 0 1px #E2E0DF;
+    background: white;
+    padding: 1em;
+    min-width: 240px; }
+    .deck .card .c-head {
+      width: -webkit-calc(100% + 2.05em);
+      width: -moz-calc(100% + 2.05em);
+      width: calc(100% + 2.05em);
+      min-height: 120px;
+      margin-top: -2.2em;
+      margin-left: -1em;
+      text-align: center;
+      color: #F87B27;
+      font-weight: 500;
+      line-height: 3; }
+      .deck .card .c-head h4 {
+        color: #CDBEB5;
+        font-weight: 300;
+        line-height: 0; }
+      .deck .card .c-head img {
+        box-shadow: 0 0 0 2px #F87B27;
+        display: block;
+        width: 120px;
+        margin: 3em auto;
+        border-radius: 100%; }
+      .deck .card .c-head.red {
+        background: url(http://i.imgur.com/NH1nLsV.png); }
+      .deck .card .c-head.c-head-blue {
+        background: #65CBAE;
+        color: #fff; }
+        .deck .card .c-head.c-head-blue h4 {
+          color: #fff; }
+      .deck .card .c-head.c-head-grey {
+        background: #8B999D; }
+      .deck .card .c-head.c-head-orange {
+        background: #FA802F; }
+      .deck .card .c-head.green {
+        background: url(http://i.imgur.com/hCrSRTN.png); }
+      .deck .card .c-head .head-control {
+        position: absolute; }
+        .deck .card .c-head .head-control ul {
+          list-style: none;
+          margin: -1em -1em; }
+          .deck .card .c-head .head-control ul li {
+            float: left;
+            margin: 0 1em; }
+    .deck .card .c-content {
+      margin-top: 1em;
+      padding: 1em 0;
+      font-weight: 300; }
+      .deck .card .c-content h1, .deck .card .c-content h2, .deck .card .c-content h3, .deck .card .c-content h4 {
+        text-align: center; }
+      .deck .card .c-content p {
+        color: #CDBEB5;
+        text-align: center; }
+    .deck .card.c-full {
+      width: 100%;
+      margin: 1em auto; }
+    .deck .card.c-double {
+      width: 48%;
+      margin-top: 1em;
+      margin-left: 4%;
+      float: left; }
+      .deck .card.c-double:nth-child(1) {
+        margin-left: 0%; }
+    .deck .card.c-tier {
+      width: 31%;
+      margin-top: 1em;
+      margin-left: 3.5%;
+      float: left; }
+      .deck .card.c-tier:first-child {
+        margin-left: 0; }
+    .deck .card .c-foot ul {
+      list-style: none;
+      width: 80%;
+      padding: 2em 0;
+      margin: auto; }
+      .deck .card .c-foot ul li {
+        float: left;
+        display: block;
+        text-align: center;
+        width: 33%; }
+        .deck .card .c-foot ul li a {
+          color: #F87B27; }
+
+@media screen and (max-width: 320px) {
+  .deck .card {
+    width: 100%;
+    max-width: 100%; } }
