profil page improved

--- a/development/assets/views/desktop.html
+++ b/development/assets/views/desktop.html
@@ -18,14 +18,12 @@
 	</ul>
 </nav>
 <section class="about-section" ng-hide="currentView != 'about'">
+
 	<div class="deck">
-
-
-		<div>
     <div class="hello-section card c-tier">
     <div class="c-head">
-      <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jaredbooye/128.jpg" alt="">
-      <h3>John Doe</h3>
+      <img src="http://rocket-design.fr/assets/img/poly_kevin_rd.png" alt="">
+      <h3>Kevin Cudennec</h3>
       <h4>Co-founder - Designer </h4>
 
     </div>
@@ -45,9 +43,9 @@
   </div>
  <div class="hello-section card c-tier">
     <div class="c-head">
-      <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jaredbooye/128.jpg" alt="">
-      <h3>John Doe</h3>
-      <h4>Co-founder - Designer </h4>
+      <img src="http://rocket-design.fr/assets/img/poly_lulu_rd_nb.png" alt="">
+      <h3>Lucas Bonomi</h3>
+      <h4>Co-founder - Frontend Developer </h4>
 
     </div>
 
@@ -66,8 +64,8 @@
   </div>
  <div class="hello-section card c-tier">
     <div class="c-head">
-      <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jaredbooye/128.jpg" alt="">
-      <h3>John Doe</h3>
+      <img src="http://rocket-design.fr/assets/img/poly_kmart_rd.jpg" alt="">
+      <h3>Kevin Paul Martin</h3>
       <h4>Co-founder - Designer </h4>
 
     </div>
@@ -85,9 +83,21 @@
     </div>
 
   </div>
+<!--
+	 <div class="hello-section card c-full">
+	 	 <div class="c-head">
+      <h3> Why Ripples ?</h3>
+    </div>
 
-  </div>
+    <div class="c-content">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque delectus, magni. Explicabo cumque accusamus debitis soluta! Aut quaerat sequi deleniti nemo iure, obcaecati, distinctio dolorem nam, natus ipsam sapiente ut!</p>
+    </div>
 
+    <div class="c-foot">
+      <ul>
+      </ul>
+    </div>
+	 </div> -->
 
 	</div>
 </section>
