--- a/development/assets/styles/pages/about.scss
+++ b/development/assets/styles/pages/about.scss
@@ -1,29 +1,41 @@
 .about-section{
-	display: block;
-	width: 100%;
-	height: 100%;
-	margin: 0;
-	position: absolute;
-	.team{
-		max-width: 1020px;
-		width: 90%;
-		min-height: 470px;
-		height: auto;
-		position: relative;
-		margin: 0 auto;
-		margin-top: 50%;
-		transform: translate3d(0,-100%,0);
 
-		.card{
-			width: calc(33% - 40px);
-			margin: 0;
-			margin-left: 60px;
-			height: auto;
-			float: left;
 
-			&:first-of-type{
-				margin-left: 0;
-			}
-		}
+
+
+	.deck{
+
+	  .card{
+
+	    .c-head{
+
+	      img{
+	      	box-shadow: 0 0 0 2px $blue;
+	      }
+
+	      h1,h2,h3,h4{
+	      	color: $blue;
+	      }
+	    }
+
+
+			// Footer card
+	      .c-foot{
+			    ul{
+			      li{
+			        a{
+			        	color: $blue;
+			        }
+			      }
+			    }
+			  }
+
+	  }
+
+	  &.c-full{
+	  	margin-top: 1em;
+	  	float: left;
+	  }
 	}
+
 }
