--- a/public/assets/styles/style.css
+++ b/public/assets/styles/style.css
@@ -1,3 +1,4 @@
+@import url(http://weloveiconfonts.com/api/?family=entypo|zocial);
 * {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -61,37 +62,27 @@ body {
 a {
   text-decoration: none; }
 
+/* zocial */
+[class*="zocial-"]:before {
+  font-family: 'zocial', sans-serif; }
+
 figure {
   margin: 0; }
 
-.about-section {
-  display: block;
+.deck {
   width: 100%;
-  height: 100%;
-  margin: 0;
-  position: absolute; }
-  .about-section .team {
-    max-width: 1020px;
-    width: 90%;
-    min-height: 470px;
-    height: auto;
-    position: relative;
-    margin: 0 auto;
-    margin-top: 50%;
-    -webkit-transform: translate3d(0, -100%, 0);
-    -moz-transform: translate3d(0, -100%, 0);
-    -o-transform: translate3d(0, -100%, 0);
-    transform: translate3d(0, -100%, 0); }
-    .about-section .team .card {
-      width: -webkit-calc(33% - 40px);
-      width: -moz-calc(33% - 40px);
-      width: calc(33% - 40px);
-      margin: 0;
-      margin-left: 60px;
-      height: auto;
-      float: left; }
-      .about-section .team .card:first-of-type {
-        margin-left: 0; }
+  min-height: 420px;
+  margin-top: 3em; }
+
+.about-section .deck .card .c-head img {
+  box-shadow: 0 0 0 2px #90B4E4; }
+.about-section .deck .card .c-head h1, .about-section .deck .card .c-head h2, .about-section .deck .card .c-head h3, .about-section .deck .card .c-head h4 {
+  color: #90B4E4; }
+.about-section .deck .card .c-foot ul li a {
+  color: #90B4E4; }
+.about-section .deck.c-full {
+  margin-top: 1em;
+  float: left; }
 
 nav {
   width: 100%;
@@ -214,7 +205,7 @@ nav {
 
 .deck {
   max-width: 90%;
-  margin: 1em auto; }
+  margin: 4em auto; }
   .deck .card {
     border-radius: 2px;
     overflow: hidden;
