--- a/development/assets/styles/interface/nav.scss
+++ b/development/assets/styles/interface/nav.scss
@@ -1,10 +1,13 @@
 nav{
-	width: 100%;
+	width: 90%;
 	position: absolute;
 	z-index: 9999;
 	left: 0;
 	top: 0;
 	height: 60px;
+	right: 0;
+	margin: auto;
+	padding: 1em 0;
 
 	ul{
 		float: right;
@@ -81,7 +84,7 @@ nav{
 		h3{
 			position: absolute;
 			left: 60px;
-			top: 6px;
+			top: 23px;
 			margin: 0;
 			font-weight: 100;
 			transition: color
