--- a/development/assets/styles/pages/about.scss
+++ b/development/assets/styles/pages/about.scss
@@ -7,6 +7,21 @@
 
 	  .card{
 
+			opacity: 1;
+			animation:pop 1s ease ;
+
+
+			&:nth-child(1){
+			animation:pop 1s ease 0s;
+			}
+			&:nth-child(2){
+			animation:pop 1s ease .15s;
+			}
+			&:nth-child(3){
+			animation:pop 1s ease .3s;
+			}
+
+
 	    .c-head{
 
 	      img{
@@ -34,7 +49,7 @@
 
 	  &.c-full{
 	  	margin-top: 1em;
-	  	float: left;
+	  	float: le
 	  }
 	}
 
