--- a/development/assets/views/mobile.html
+++ b/development/assets/views/mobile.html
@@ -1,2 +1,104 @@
-<link rel="stylesheet" href="/styles/mobile.css">
-<h1>Mobile Hello World!</h1>
+<link rel="stylesheet" href="/assets/styles/style.css">
+<!-- Main Navigation -->
+<nav ng-class="currentView">
+  <a class="brand" href="/">
+    <figure class="logo">
+      <div class="ripple"></div>
+      <div class="ripple"></div>
+      <div class="ripple"></div>
+      <div class="ripple"></div>
+    </figure>
+    <h3>ripples</h3>
+  </a>
+  <ul>
+    <li><a href="/blog">BLOG</a></li>
+    <li><a href="/contact">CONTACT</a></li>
+    <li><a href="/about">ABOUT</a></li>
+    <li><a href="/store">STORE</a></li>
+  </ul>
+</nav>
+<section class="about-section" ng-hide="currentView != 'about'">
+
+  <div class="deck">
+    <div class="hello-section card c-tier">
+    <div class="c-head">
+      <img src="http://rocket-design.fr/assets/img/poly_kevin_rd.png" alt="">
+      <h3>Kevin Cudennec</h3>
+      <h4>Co-founder - Designer </h4>
+
+    </div>
+
+    <div class="c-content">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque delectus, magni. Explicabo cumque accusamus debitis soluta! Aut quaerat sequi deleniti nemo iure, obcaecati, distinctio dolorem nam, natus ipsam sapiente ut!</p>
+    </div>
+
+    <div class="c-foot">
+      <ul>
+        <li><a href="#"><span class="zocial-instagram"></span></a></li>
+        <li><a href="#"><span class="zocial-twitter"></span></a></li>
+        <li><a href="#"><span class="zocial-dribbble"></span></a></li>
+      </ul>
+    </div>
+
+  </div>
+ <div class="hello-section card c-tier">
+    <div class="c-head">
+      <img src="http://rocket-design.fr/assets/img/poly_lulu_rd_nb.png" alt="">
+      <h3>Lucas Bonomi</h3>
+      <h4>Co-founder - Frontend Developer </h4>
+
+    </div>
+
+    <div class="c-content">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque delectus, magni. Explicabo cumque accusamus debitis soluta! Aut quaerat sequi deleniti nemo iure, obcaecati, distinctio dolorem nam, natus ipsam sapiente ut!</p>
+    </div>
+
+    <div class="c-foot">
+      <ul>
+        <li><a href="#"><span class="zocial-instagram"></span></a></li>
+        <li><a href="#"><span class="zocial-twitter"></span></a></li>
+        <li><a href="#"><span class="zocial-dribbble"></span></a></li>
+      </ul>
+    </div>
+
+  </div>
+ <div class="hello-section card c-tier">
+    <div class="c-head">
+      <img src="http://rocket-design.fr/assets/img/poly_kmart_rd.jpg" alt="">
+      <h3>Kevin Paul Martin</h3>
+      <h4>Co-founder - Designer </h4>
+
+    </div>
+
+    <div class="c-content">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque delectus, magni. Explicabo cumque accusamus debitis soluta! Aut quaerat sequi deleniti nemo iure, obcaecati, distinctio dolorem nam, natus ipsam sapiente ut!</p>
+    </div>
+
+    <div class="c-foot">
+      <ul>
+        <li><a href="#"><span class="zocial-instagram"></span></a></li>
+        <li><a href="#"><span class="zocial-twitter"></span></a></li>
+        <li><a href="#"><span class="zocial-dribbble"></span></a></li>
+      </ul>
+    </div>
+
+  </div>
+<!--
+   <div class="hello-section card c-full">
+     <div class="c-head">
+      <h3> Why Ripples ?</h3>
+    </div>
+
+    <div class="c-content">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque delectus, magni. Explicabo cumque accusamus debitis soluta! Aut quaerat sequi deleniti nemo iure, obcaecati, distinctio dolorem nam, natus ipsam sapiente ut!</p>
+    </div>
+
+    <div class="c-foot">
+      <ul>
+      </ul>
+    </div>
+   </div> -->
+
+  </div>
+</section>
+<figure class="bg1 bg" ng-hide="currentView != 'home'"></figure>
